The user sign up was implemented

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.4.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express-wolox-logger": "^1.0.0",
     "graphql": "^14.2.1",
